Lotta progress not sure what exactly

--- a/source/Styles/nav-bar.styl
+++ b/source/Styles/nav-bar.styl
@@ -1,5 +1,25 @@
 .nav-bar
-    height 20px
+    // height 32px
     width calc(100% - 12px)
-    padding 4px
+    // padding 4px
     margin 2px
+    margin-top 8px
+    
+.nav-item
+    font-family hfnss
+    color pointColor
+    -webkit-font-smoothing none
+    margin 0
+    margin-right 18px
+    padding 4px
+    font-size 2em
+    cursor pointer
+
+    &.selected
+        color pointier
+    &:hover
+        background-color ignorable0
+        color pointier
+    &:active
+        background-color pointier
+        color ignorable3
