--- a/source/Styles/Main.styl
+++ b/source/Styles/Main.styl
@@ -20,7 +20,7 @@ backgroundx2    = #06120e   // The default background color
 backgroundColor = #030907   // The background within a background, such as a textbox field
 actualBlack     = #000000   // Use in extreme contrast with already near-blacks, like background and backgroundx2
 offBlue         = #143b2e   // 'off' as in 'off from background'. A similarly dark color off in hue.
-
+offBlueDarker   = #071d17
 
 critical        = #f21d23   // When something is an emergency and demands attention
 good            = #366317   // Largely unnecessary green color, used mostly in counterpoint with critical
