--- a/source/Styles/post-body.styl
+++ b/source/Styles/post-body.styl
@@ -7,5 +7,19 @@
     
     margin-top 8px
     margin-left 8px
+
     width calc(100% - 316px)
     height calc(100vh - 116px)
+    
+    overflow scroll
+    
+    
+.post-section
+    padding 4px
+    margin-bottom 4px
+
+.odd
+    background-color offBlueDarker
+    
+.title
+    font-size 2em
