Added logic font

--- a/source/Styles/Main.styl
+++ b/source/Styles/Main.styl
@@ -14,6 +14,10 @@
   font-family HFTIN
   src url("./hftin.ttf")
   
+@font-face
+  font-family HFLLG
+  src url("https://cdn.rawgit.com/Chadtech-Online-1/Chadtech-Online-1.github.io/e7b402f9/HFLLG.ttf")
+  
 
 
 backgroundx2    = #06120e   // The default background color
@@ -50,3 +54,4 @@ body
   
 .main
   width 100%
+
