--- a/source/Styles/post-body.styl
+++ b/source/Styles/post-body.styl
@@ -8,8 +8,8 @@
     margin-top 8px
     margin-left 8px
 
-    width calc(100% - 316px)
-    height calc(100vh - 116px)
+    width calc(100% - 466px)
+    height calc(100vh - 80px)
     
     overflow scroll
     
@@ -21,5 +21,12 @@
 .odd
     background-color offBlueDarker
     
+.logic
+    p
+        font-family HFLLG
+    
 .title
     font-size 2em
+    
+
+
