Changed the coloring

--- a/source/Styles/post-body.styl
+++ b/source/Styles/post-body.styl
@@ -1,5 +1,6 @@
 .post-body
     background-color backgroundx2
+    
     border-top 2px solid ignorable3
     border-left 2px solid ignorable3
     border-right 2px solid ignorable1
@@ -18,7 +19,7 @@
     padding 4px
     margin-bottom 4px
 
-.odd
+.even
     background-color offBlueDarker
     
 .logic
